bubba-frontend (1.2.4.64) claire estelle; urgency=low

  * Fixed PHP error when using static IP config on WAN interface. Closes #1092.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 16:03:19 +0100

bubba-frontend (1.2.4.63) karmic; urgency=low

  * Fixed "close" buttons in dialogs again. 

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 14:19:16 +0100

bubba-frontend (1.2.4.62) claire estelle; urgency=low

  * Fixed "close" buttons in dialogs.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 12:28:52 +0100

bubba-frontend (1.2.4.61) claire estelle; urgency=low

  * Fix gateway parameter in set_static. Closes #1124

 -- Tor Krill <tor@excito.com>  Wed, 03 Feb 2010 12:00:00 +0100

bubba-frontend (1.2.4.60) claire estelle; urgency=low

  * Fixed incorrect profile update from WAN page.

 -- PA Nilsson <pa@excito.com>  Wed, 03 Feb 2010 10:30:34 +0100

bubba-frontend (1.2.4.59) karmic; urgency=low

  * Fixed red status bar, closes #1118 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 23:40:11 +0100

bubba-frontend (1.2.4.58) estelle claire; urgency=low

  * undo the model test, the reason seems to be deeper that this

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 22:28:06 +0100

bubba-frontend (1.2.4.54) estelle claire; urgency=low

  * adding capabilities 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 02 Feb 2010 15:39:26 +0100

bubba-frontend (1.2.4.53) estelle claire; urgency=low

  * Added missing disk_model code.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 15:34:46 +0100

bubba-frontend (1.2.4.52) estelle claire; urgency=low

  * Fixed uninitiated variable in WAN page with no cable. 

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 14:33:28 +0100

bubba-frontend (1.2.4.51) estelle claire; urgency=low

  * Removed forgotten context menu div in backup.

 -- PA Nilsson <pa@excito.com>  Tue, 02 Feb 2010 13:44:07 +0100

bubba-frontend (1.2.4.50) estelle claire; urgency=low

  * Stopping dnsmasq when setting auto/server profile.
